welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: not found: value estsurBiscuit
if (estsurBiscuit()) {
    ^RunFour:9: error: value unary_! is not a member of Int
while (!a=/= 4) {
       ^